<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
        
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/action_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:title="Cart"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/cart_badge_layout" />
        
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
